--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<script type="text/javascript">
 		
-		window.location.href="https://github.com/LUUUAN/Lonely-Snowman"; 
+		window.location.href="https://www.youtube.com/"; 
 	</script>>
 
 
