--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<script type="text/javascript">
 		
-		window.location.href="https://www.youtube.com/"; 
+		window.location.href="https://www.youtube.com/watch?v=hySMUP6V_Ec&feature=youtu.be&tdsourcetag=s_pcqq_aiomsg"; 
 	</script>>
 
 
